# CDWAgent

./: .env.example  .gitignore  AGENTS.md  README.md  manifest.json  pyproject.toml
docs/: BIOROUTER.md
docs/agent-flows/: 01-routing-decision-tree.md  04-schema-interaction-map.md  05-disambiguation-matrix.md  INDEX.md
docs/agent-flows/02-tool-flows/: README.md  clinical-queries.md  concept-search.md  crossmap-bridge.md  export.md  notes-retrieval.md  schema-discovery.md  statistics.md
docs/agent-flows/03-clinical-workflows/: 01-cohort-by-codes.md  02-cohort-by-phenotype.md  03-multi-criteria-cohort.md  04-time-restricted-cohort.md  05-lab-trajectory.md  06-drug-exposure-trajectory.md  07-disease-progression.md  08-healthcare-utilization.md  09-adverse-drug-event.md  10-polypharmacy.md  11-notes-phenotype-extraction.md  12-sdoh-research.md  13-stratified-disparities.md  14-vulnerable-population.md  15-trial-feasibility.md  16-care-gap-detection.md  17-readmission-analysis.md  18-omop-cdw-bridge.md  19-write-rejection.md  20-disambiguation.md  README.md
docs/upstream/: biorouter-cdwagent.md
src/cdwagent/: cli.py  config.py  server.py  sql_log.py
src/cdwagent/tools/: concepts.py  export.py  notes.py  queries.py
